Añadido el archivo App.js, el funcionamiento en JS de encriptacion y desncriptacion de la letra a (Aun no muestra en la pag solo en consola)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section class="caja">
             <div class="texto-ingresado">
-                <textarea name="Ingreso" placeholder="Ingrese el texto aqui"></textarea>
+                <textarea id="texto" name="Ingreso" placeholder="Ingrese el texto aqui"></textarea>
             </div>
             <div class="muñeco">
                 <img src="./Imagenes/Muñeco.png" alt="muñeco">
@@ -29,8 +29,8 @@
         </section>
         <div class="botones-contenedor">
             <p>&#9888 Use letras minusculas y sin acentos</p>
-            <button>Encriptar!</button>
-            <button>Desencriptar!</button>
+            <button id="encriptar">Encriptar!</button>
+            <button id="desencriptar">Desencriptar!</button>
         </div>
     </main>
     <footer>
@@ -40,5 +40,6 @@
                 <a href="https://github.com/Miller1999" target="_blank"><img src="./Imagenes/Github.png" alt="Logo Github"></a>
         </div>
     </footer>
+    <script src="./App.js"></script>
 </body>
 </html>
