Funcionamiento de encriptador con la a y mostrar el mensaje en pantalla

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
                 <textarea id="texto" name="Ingreso" placeholder="Ingrese el texto aqui"></textarea>
             </div>
             <div class="muñeco">
-                <img src="./Imagenes/Muñeco.png" alt="muñeco">
-                <h2>Ningun mensaje fue encontrado!</h2>
-                <p>Ingrese el texto que desea encriptar o desencriptar.</p>
+                <div id="muñeco">
+                    <img src="./Imagenes/Muñeco.png" alt="muñeco">
+                </div>
+                <div>
+                    <h2 id="Titulo">Ningun mensaje fue encontrado!</h2>
+                    <p id="textoIngresado">Ingrese el texto que desea encriptar o desencriptar.</p>
+                </div>
             </div>
         </section>
         <div class="botones-contenedor">
