Se añadio el boton de copiar junto con su funcionamiento en JS y su diseño en CSS

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                     <h2 id="Titulo">Ningun mensaje fue encontrado!</h2>
                     <p id="textoIngresado">Ingrese el texto que desea encriptar o desencriptar.</p>
                 </div>
+                <div>
+                    <button id="copiar">Copiar</button>
+                    <textarea id="text" style="display: none;"></textarea>
+                </div>
             </div>
         </section>
         <div class="botones-contenedor">
