Corregido el CSS del textarea invisible en la div del boton copiar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div>
                     <button id="copiar">Copiar</button>
-                    <textarea id="text" style="display: none;"></textarea>
+                    <textarea id="text"></textarea>
                 </div>
             </div>
         </section>
