--- a/index.html
+++ b/index.html
@@ -6,48 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de texto</title>
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="animacion.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap" rel="stylesheet">
 </head>
-<body> 
-    <header>
-        <div class="contenedor-logo">
-            <img class="logo" src="./Imagenes/Vector.png" alt="Logo Alura">
-        </div>        
-    </header>
-    <main>
-        <section class="caja">
-            <div class="texto-ingresado">
-                <textarea id="texto" name="Ingreso" placeholder="Ingrese el texto aqui" onkeypress="return ((event.charCode >= 97 && event.charCode <= 122) || event.charCode == 32)"></textarea>
+<body>
+    <section id="pag">
+        <header>
+            <div class="contenedor-logo">
+                <img class="logo" src="./Imagenes/Vector.png" alt="Logo Alura">
+            </div>        
+        </header>
+        <main>
+            <section class="caja">
+                <div class="texto-ingresado">
+                    <textarea id="texto" name="Ingreso" placeholder="Ingrese el texto aqui" onkeypress="return ((event.charCode >= 97 && event.charCode <= 122) || event.charCode == 32)"></textarea>
+                </div>
+                <div class="muñeco">
+                    <div id="muñeco">
+                        <img src="./Imagenes/Muñeco.png" alt="muñeco">
+                    </div>
+                    <div>
+                        <h2 id="Titulo">Ningun mensaje fue encontrado!</h2>
+                        <p id="textoIngresado">Ingrese el texto que desea encriptar o desencriptar.</p>
+                    </div>
+                    <div>
+                        <button id="copiar">Copiar</button>
+                        <textarea id="text"></textarea>
+                    </div>
+                </div>
+            </section>
+            <div class="botones-contenedor">
+                <p>&#9888 Use letras minusculas y sin acentos</p>
+                <button id="encriptar">Encriptar!</button>
+                <button id="desencriptar">Desencriptar!</button>
             </div>
-            <div class="muñeco">
-                <div id="muñeco">
-                    <img src="./Imagenes/Muñeco.png" alt="muñeco">
-                </div>
-                <div>
-                    <h2 id="Titulo">Ningun mensaje fue encontrado!</h2>
-                    <p id="textoIngresado">Ingrese el texto que desea encriptar o desencriptar.</p>
-                </div>
-                <div>
-                    <button id="copiar">Copiar</button>
-                    <textarea id="text"></textarea>
-                </div>
+        </main>
+        <footer>
+            <div>
+                Desarrollado por Miller Javier Arias Quintero, me encuentran en 
+                    <a href="https://www.linkedin.com/in/miller-javier-arias-quintero/" target="_blank"><img src="./Imagenes/Linkedin.png" alt="Logo Linkedin"></a>
+                    <a href="https://github.com/Miller1999" target="_blank"><img src="./Imagenes/Github.png" alt="Logo Github"></a>
             </div>
-        </section>
-        <div class="botones-contenedor">
-            <p>&#9888 Use letras minusculas y sin acentos</p>
-            <button id="encriptar">Encriptar!</button>
-            <button id="desencriptar">Desencriptar!</button>
-        </div>
-    </main>
-    <footer>
-        <div>
-            Desarrollado por Miller Javier Arias Quintero, me encuentran en 
-                <a href="https://www.linkedin.com/in/miller-javier-arias-quintero/" target="_blank"><img src="./Imagenes/Linkedin.png" alt="Logo Linkedin"></a>
-                <a href="https://github.com/Miller1999" target="_blank"><img src="./Imagenes/Github.png" alt="Logo Github"></a>
-        </div>
-    </footer>
+        </footer>
+    </section>
+
+    <section id="animacion">
+        <img class="logoan" src="./Imagenes/logoAnima.png" alt="Logo">
+        <div class="cuadrado1"></div>
+        <div class="cuadrado2"></div>
+    </section>
     <script src="./App.js"></script>
 </body>
 </html>
