Terminado todo lo del escritorio y comienzo de la responsividad de tablet y celular

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <header>
             <div class="contenedor-logo">
                 <img class="logo" src="./Imagenes/Vector.png" alt="Logo Alura">
-            </div>        
+            </div>    
+            <div>
+                <h1>Enkripto</h1>
+            </div>    
         </header>
         <main>
             <section class="caja">
